--- a/codebook/RMD_codebook_draft_ST.Rmd
+++ b/codebook/RMD_codebook_draft_ST.Rmd
@@ -459,13 +459,16 @@ cesd_word_long <- cesd_word %>%
                values_to = "description") %>% 
   mutate(description = str_replace(description, "^\\d+\\.\\s*", ""),
          var_name = str_to_lower(var_name), 
+         #description = case_when(var_name == "c21" ~ "In the past 6 months, have you ever thought about killing yourself?"),
          notes = case_when(var_name == "c4" ~ "This item should be reverse scored. `c4_r` is reverse scored",
                            var_name == "c8" ~ "This item should be reverse scored. `c8_r` is reverse scored",
                            var_name == "c12" ~ "This item should be reverse scored. `c12_r` is reverse scored",
                            var_name == "c16" ~ "This item should be reverse scored. `c16_r` is reverse scored",
                            
                            var_name %in% c("c22", "c23") ~ "Skipped if `c21` = No",
-                           TRUE ~ as.character(""))) 
+                           TRUE ~ as.character(""))) %>%
+  mutate(description = if_else(var_name == "c21", "In the past 6 months, have you ever thought about killing yourself?", description))
+  
 
 ```
 
@@ -1090,11 +1093,15 @@ dast_word_long <- dast_word %>%
                values_to = "description") %>% 
   mutate(description = str_replace(description, "^\\d+\\.\\s*", ""),
          var_name = str_to_lower(var_name),
+         description = case_when (var_name == "d00" ~ "Is TC currently pregnant?",
+                                  var_name == "d2a" ~ "Have you misused prescription drugs in the last 6 months?",
+                                  var_name == "d2b" ~ "Have you misused prescription drugs in the last 6 months?"),
          notes = case_when(var_name == "d4" ~ "This item should be reverse scored. `d4_r` is reverse scored",
                            var_name == "d5" ~ "This item should be reverse scored. `d4_r` is reverse scored",
                            TRUE ~ as.character("")
-                           )) %>%
-  slice(3:25)
+                           )
+         ) %>%
+  slice(4:25)
 
 
 
@@ -1347,7 +1354,7 @@ CTS2_word_long <- CTS2_word %>%
   mutate(description = str_replace(description, "^\\d+\\.\\s*", ""),
          var_name = str_to_lower(var_name), 
          notes = as.character("")) %>% 
-  slice(1:19)
+  slice(1:26)
 
 ```
 
@@ -2544,10 +2551,11 @@ dyadc_word_long <- dyadc_word %>%
                values_to = "description") %>% 
   mutate(description = str_replace(description, "^\\d+\\.\\s*", ""),
          var_name = str_to_lower(var_name), 
+         #description = case_when(var_name = )
          notes = case_when(var_name == "e18" ~ "This item should be reverse scored. `e18_r` is reverse scored",
                            var_name == "e19" ~ "This item should be reverse scored. `e19_r` is reverse scored",
                            TRUE ~ as.character(""))) %>%
-  slice(1:34)
+  slice(1:32)
 
 
 ```
