--- a/codebook/RMD_codebook_draft_ST.Rmd
+++ b/codebook/RMD_codebook_draft_ST.Rmd
@@ -917,7 +917,7 @@ Descriptive statistics are presented below for each item and total/subscale scor
 ```{r cis-mean-items}
 # Create subset of BSI items
 cis_data_subset <- complete %>%
-  select(ciq1:ciq2, ciq3, ciq_psych_total, ciq_psych_avg)
+  select(ciq1:ciq2, ciq3, ciq_psych_total)
 
 # Calculate the summary statistics for each variable
 cis_summary_data <- lapply(cis_data_subset, function(x) {
@@ -2732,7 +2732,7 @@ Descriptive statistics are presented below for each item and total/subscale scor
 ```{r dyadc-mean-items}
 # Create subset of dyadc items
 dyadc_data_subset <- complete %>%
-  select(e1:e32, "dyadc_con_total", "dyadc_con_avg", "dyadc_aff_exp_total", "dyadc_aff_exp_avg", "dyadc_satis_total", "dyadc_satis_avg","dyadc_cohes_total", "dyadc_cohes_avg")
+  select(e1:e32, "dyadc_con_total")
 
 # Calculate the summary statistics for each variable
 dyadc_summary_data <- lapply(dyadc_data_subset, function(x) {
