update: fix x-axis labels

--- a/codebook/RMD_codebook_draft_ST.Rmd
+++ b/codebook/RMD_codebook_draft_ST.Rmd
@@ -1682,6 +1682,7 @@ complete %>%
     )
   ) +
   bar_style +
+   scale_x_discrete(labels = label_wrap(10)) +
   labs(title = 'Distribution of Partner Psychological Aggression Severity',
        y = "Number of Participants") + 
   THEME
