--- a/codebook/tpw_references.bib
+++ b/codebook/tpw_references.bib
@@ -216,3 +216,27 @@
   year={2017},
   publisher={National Acad Sciences}
 }
+
+# Rand Health Survey SF-12 Article
+
+@article{ware199612,
+  title={A 12-Item Short-Form Health Survey: construction of scales and preliminary tests of reliability and validity},
+  author={Ware Jr, John E and Kosinski, Mark and Keller, Susan D},
+  journal={Medical care},
+  pages={220--233},
+  year={1996},
+  publisher={JSTOR}
+}
+
+# International Trauma Questionnaire
+
+@article{cloitre2018international,
+  title={The International Trauma Questionnaire: Development of a self-report measure of ICD-11 PTSD and complex PTSD},
+  author={Cloitre, Maryl{\`e}ne and Shevlin, Mark and Brewin, Chris R and Bisson, Jonathan I and Roberts, Neil P and Maercker, Andreas and Karatzias, Thanos and Hyland, Philip},
+  journal={Acta Psychiatrica Scandinavica},
+  volume={138},
+  number={6},
+  pages={536--546},
+  year={2018},
+  publisher={Wiley Online Library}
+}
